[dagster-powerbi] Update Power BI docs/examples to use translator instance and PowerBITranslatorData

--- a/docs/content/integrations/powerbi.mdx
+++ b/docs/content/integrations/powerbi.mdx
@@ -89,7 +89,7 @@ from dagster_powerbi import (
     PowerBIWorkspace,
     load_powerbi_asset_specs,
 )
-from dagster_powerbi.translator import PowerBIContentData, PowerBIContentType
+from dagster_powerbi.translator import PowerBIContentType, PowerBITranslatorData
 
 import dagster as dg
 
@@ -106,7 +106,7 @@ power_bi_workspace = PowerBIWorkspace(
 # A translator class lets us customize properties of the built
 # Power BI assets, such as the owners or asset key
 class MyCustomPowerBITranslator(DagsterPowerBITranslator):
-    def get_asset_spec(self, data: PowerBIContentData) -> dg.AssetSpec:
+    def get_asset_spec(self, data: PowerBITranslatorData) -> dg.AssetSpec:
         # We create the default asset spec using super()
         default_spec = super().get_asset_spec(data)
         # We customize the team owner tag for all assets,
@@ -122,8 +122,7 @@ class MyCustomPowerBITranslator(DagsterPowerBITranslator):
 
 
 power_bi_specs = load_powerbi_asset_specs(
-    power_bi_workspace,
-    dagster_powerbi_translator=MyCustomPowerBITranslator,
+    power_bi_workspace, dagster_powerbi_translator=MyCustomPowerBITranslator()
 )
 defs = dg.Definitions(
     assets=[*power_bi_specs], resources={"power_bi": power_bi_workspace}
