--- a/docs/content/integrations/powerbi.mdx
+++ b/docs/content/integrations/powerbi.mdx
@@ -122,7 +122,8 @@ class MyCustomPowerBITranslator(DagsterPowerBITranslator):
 
 
 power_bi_specs = load_powerbi_asset_specs(
-    power_bi_workspace, dagster_powerbi_translator=MyCustomPowerBITranslator
+    power_bi_workspace,
+    dagster_powerbi_translator=MyCustomPowerBITranslator,
 )
 defs = dg.Definitions(
     assets=[*power_bi_specs], resources={"power_bi": power_bi_workspace}
