Fix pyright and code

--- a/docs/content/integrations/tableau.mdx
+++ b/docs/content/integrations/tableau.mdx
@@ -143,7 +143,8 @@ class MyCustomTableauTranslator(DagsterTableauTranslator):
 
 
 tableau_specs = load_tableau_asset_specs(
-    tableau_workspace, dagster_tableau_translator=MyCustomTableauTranslator
+    tableau_workspace,
+    dagster_tableau_translator=MyCustomTableauTranslator,
 )
 defs = dg.Definitions(assets=[*tableau_specs], resources={"tableau": tableau_workspace})
 ```
