--- a/docs/content/integrations/looker.mdx
+++ b/docs/content/integrations/looker.mdx
@@ -93,8 +93,8 @@ By default, Dagster will generate asset specs for each Looker asset based on its
 ```python file=/integrations/looker/customize-looker-assets.py
 from dagster_looker import (
     DagsterLookerApiTranslator,
+    LookerApiTranslatorStructureData,
     LookerResource,
-    LookerStructureData,
     LookerStructureType,
     load_looker_asset_specs,
 )
@@ -109,7 +109,9 @@ looker_resource = LookerResource(
 
 
 class CustomDagsterLookerApiTranslator(DagsterLookerApiTranslator):
-    def get_asset_spec(self, looker_structure: LookerStructureData) -> dg.AssetSpec:
+    def get_asset_spec(
+        self, looker_structure: LookerApiTranslatorStructureData
+    ) -> dg.AssetSpec:
         # We create the default asset spec using super()
         default_spec = super().get_asset_spec(looker_structure)
         # We customize the team owner tag for all assets,
@@ -125,8 +127,7 @@ class CustomDagsterLookerApiTranslator(DagsterLookerApiTranslator):
 
 
 looker_specs = load_looker_asset_specs(
-    looker_resource,
-    dagster_looker_translator=CustomDagsterLookerApiTranslator,
+    looker_resource, dagster_looker_translator=CustomDagsterLookerApiTranslator()
 )
 defs = dg.Definitions(assets=[*looker_specs], resources={"looker": looker_resource})
 ```
