--- a/docs/content/integrations/looker.mdx
+++ b/docs/content/integrations/looker.mdx
@@ -125,7 +125,8 @@ class CustomDagsterLookerApiTranslator(DagsterLookerApiTranslator):
 
 
 looker_specs = load_looker_asset_specs(
-    looker_resource, dagster_looker_translator=CustomDagsterLookerApiTranslator
+    looker_resource,
+    dagster_looker_translator=CustomDagsterLookerApiTranslator,
 )
 defs = dg.Definitions(assets=[*looker_specs], resources={"looker": looker_resource})
 ```
